2008-05-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Dispose() is called
	  after the widget is destroyed. There is no need to explicitely
	  destroy child widgets since destroying the parent widgets destroys
	  all children.
	* MonoDevelop.SourceEditor/SourceEditorView.cs: Don't explicitelly call
	  widget.Dispose, since Destroy already calls it.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.mdp,
	  MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/HighlightPropertiesSemanticRule.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs: New project model
	  changes.

2008-05-20  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Name the editor's
	  ViewContent.

2008-05-20  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: fixed 'Bug 384665 -
	  Gtk-critical showed in console'.

2008-05-20  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: fixed 'Bug 385457 -
	  Folding in the middle of a method'.

2008-05-16  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Change ITextToolboxNode
	  API so that nodes have more control over when they're shown.

2008-05-15  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Track API.

2008-05-15  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, MonoDevelop.SourceEditor.mdp,
	  MonoDevelop.SourceEditor/SourceEditorView.cs: Show the current
	  execution location when debugging. Show breakpoints.
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Use the new
	  UnderlineMarker.

2008-05-08  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorDisplayBinding.cs: Use platform
	  service to determine whether a mimetype is text.

2008-05-08  Mike Krüger <mkrueger@novell.com> 
