@@ -1,3 +1,8 @@
+2008-05-27  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Added new dom & new
+	  class browser.
+
 2008-05-23  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Dispose() is called
